--- a/extension/src/pages/Popup/Popup.css
+++ b/extension/src/pages/Popup/Popup.css
@@ -7,7 +7,7 @@
   text-align: center;
   height: 100%;
   padding: 10px;
-  background-color: #282c34;
+  /* background-color: #282c34; */
 }
 
 .App-logo {
@@ -22,24 +22,15 @@
 }
 
 .App-header {
-  height: 100%;
-  display: flex;
+  /* height: 100%; */
+  display: flex;  
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(10px + 2vmin); 
+  /* color: white; */
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
