--- a/browser/src/index.css
+++ b/browser/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    -webkit-app-region: drag;
+    width: 100%;
+    height: 100%;
+}
+
+input,button{
+    -webkit-app-region:none;
+}
